force-app/main/default/objects/Mission_Data__c/Mission_Data__c.object-meta.xml
<CustomObject>
    <label>Mission Data</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Mission data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mission Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>