force-app/main/default/objects/Mission_Data__c/fields/Apr__c.field-meta.xml
<CustomField>
    <fullName>Apr__c</fullName>
    <description>Apr figures.</description>
    <label>Apr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>