force-app/main/default/objects/Mission_Data__c/fields/Aug__c.field-meta.xml
<CustomField>
    <fullName>Aug__c</fullName>
    <description>Aug figures.</description>
    <label>Aug</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>