force-app/main/default/objects/Mission_Data__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bath Lifestyle</fullName>
            </value>
            <value>
                <fullName>Chinaware Total</fullName>
            </value>
            <value>
                <fullName>DXV Bath Lifestyle</fullName>
            </value>
            <value>
                <fullName>DXV Chinaware</fullName>
            </value>
            <value>
                <fullName>DXV Faucets</fullName>
            </value>
            <value>
                <fullName>Faucets - AS</fullName>
            </value>
            <value>
                <fullName>Faucets - GROHE</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>Safety Tubs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>