force-app/main/default/objects/Mission_Data__c/fields/Dec__c.field-meta.xml
<CustomField>
    <fullName>Dec__c</fullName>
    <description>Dec figures.</description>
    <label>Dec</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>