force-app/main/default/objects/Mission_Data__c/fields/Feb__c.field-meta.xml
<CustomField>
    <fullName>Feb__c</fullName>
    <description>Feb figures.</description>
    <label>Feb</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>