force-app/main/default/objects/Mission_Data__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <label>FY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>