force-app/main/default/objects/Mission_Data__c/fields/Jan__c.field-meta.xml
<CustomField>
    <fullName>Jan__c</fullName>
    <description>January figures.</description>
    <label>Jan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>