force-app/main/default/objects/Mission_Data__c/fields/Jul__c.field-meta.xml
<CustomField>
    <fullName>Jul__c</fullName>
    <description>Jul figures.</description>
    <label>Jul</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>