force-app/main/default/objects/Mission_Data__c/fields/Jun__c.field-meta.xml
<CustomField>
    <fullName>Jun__c</fullName>
    <description>Jun figures.</description>
    <label>Jun</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>