force-app/main/default/objects/Mission_Data__c/fields/Mar__c.field-meta.xml
<CustomField>
    <fullName>Mar__c</fullName>
    <description>Mar figures.</description>
    <label>Mar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>