force-app/main/default/objects/Mission_Data__c/fields/Nov__c.field-meta.xml
<CustomField>
    <fullName>Nov__c</fullName>
    <description>Nov figures.</description>
    <label>Nov</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>