force-app/main/default/objects/Mission_Data__c/fields/Oct__c.field-meta.xml
<CustomField>
    <fullName>Oct__c</fullName>
    <description>Oct figures.</description>
    <label>Oct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>