force-app/main/default/objects/Mission_Data__c/fields/Region_National_Account__c.field-meta.xml
<CustomField>
    <fullName>Region_National_Account__c</fullName>
    <label>Region/National Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>