force-app/main/default/objects/Mission_Data__c/fields/Sep__c.field-meta.xml
<CustomField>
    <fullName>Sep__c</fullName>
    <description>Sep figures.</description>
    <label>Sep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>